Mobile responsive complete

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,18 @@
   }
 } */
 
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
+
 @font-face {
   font-family: 'Regular';
   src: url('/fonts/fonts/SpaceGrotesk-VariableFont_wght.ttf') format('truetype');
